--- a/style.css
+++ b/style.css
@@ -771,7 +771,7 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #c56132;
+    background-color: #cf4302;
 }
 
 .tc-white {
@@ -788,7 +788,7 @@ h4 {
 }
 
 .btn-atomic-tangerine {
-    background: #c56132;
+    background: #cf4302;
     color: #FFFFFF!important;
 }
 
